--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,18 @@
 }
 
 #root {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100vw;
   height: 100vh;
+}
+.container{
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: relative;
   text-align: center;
+  gap:30px;
 }
 
 .card{
@@ -19,13 +25,16 @@
   justify-content: center;
   align-items: center;
   width: 200px;
-  height: 200px;
+  height: 210px;
   background-color: rgb(255, 255, 255);
   box-shadow:4px 4px 4px 4px rgba(0,0,0,0.1);
 }
 
 .img-card{
-  width: 40px;
+  display: flex;
+  aspect-ratio: 1/1;
+  width: 40%;
+  border-radius: 50px;
 }
 .separador-card{
   width: 90%;
@@ -36,8 +45,10 @@
   height: 30px;
   margin-top: 5px;
   background-color: transparent;
-  border-color: greenyellow;
+  border-color: #C1D72F;
 }
 .follow i{
-  color:greenyellow
+  font-size: 1.5rem;
+  color:#C1D72F;
+  cursor: pointer;
 }
