--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,43 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 #root {
+  display: grid;
   width: 100vw;
   height: 100vh;
-}
-.container{
-  justify-content: center;
+  justify-content:center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+}
+
+.contactos{
   display: flex;
   position: relative;
-  text-align: center;
-  gap:30px;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  background-color: white;
+}
+.contactos hr{
+  position: absolute;
+  width: 70%;
+  right: 0;
+}
+
+.container{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  column-gap: 2rem;
+  row-gap: 2rem;
 }
 
 .card{
   display: flex;
-  position: relative;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -37,6 +54,7 @@
   border-radius: 50px;
 }
 .separador-card{
+  margin-top: 5px;
   width: 90%;
 }
 
