--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,16 +1,22 @@
 .header{
     width: 100%;
-    height: 50px;
+    height: 70px;
     display: flex;
+    align-items: center;
     flex-direction: row;
     position: relative;
+    box-shadow:4px 4px 4px 4px rgba(0,0,0,0.1);
 }
 .header-div{
     display: flex;
     flex-direction: row;
     position: absolute;
-    right: 0;
+    right: 40px;
 
+}
+.header img{
+    position: absolute;
+    left:40px;
 }
 .header-nav{
     list-style: none;
