--- a/src/index.css
+++ b/src/index.css
@@ -5,21 +5,21 @@
 }
 
 #root {
-  display: grid;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  justify-content:center;
   align-items: center;
 }
 
 .container{
-  width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-content: center;
+  justify-content:center;
   align-items: center;
-  column-gap: 2rem;
-  row-gap: 2rem;
+  width: 90%;
+  
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap:32px;
 }
 
 .contactos{
@@ -36,12 +36,12 @@
   right: 0;
 }
 
-.card{
+.container > .card{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 200px;
+  width: auto;
   height: 210px;
   background-color: rgb(255, 255, 255);
   box-shadow:4px 4px 4px 4px rgba(0,0,0,0.1);
