--- a/src/components/header.css
+++ b/src/components/header.css
@@ -22,8 +22,13 @@
     list-style: none;
 
 }
-.header-div li{
+.header-nav li{
     float: left;
     text-align: center;
     padding: 16px;
+}
+
+.header-nav li a{
+    text-decoration: none;
+    color:black
 }
