--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,27 @@
 }
 
 #root {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   height: 100vh;
   align-items: center;
+}
+
+.titulo-container{
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.titulo-container hr{
+  width: 80%;
+  color: #C1D72F;
+  border-color: #C1D72F;
+  background-color: #C1D72F;
+  height: 2px;
+  margin-left: 15px;
 }
 
 .container{
@@ -25,7 +41,7 @@
   justify-content:center;
   align-items: center;
   width: 90%;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(4, minmax(220px, 1fr));
   gap:32px;
 }
 
@@ -84,6 +100,7 @@
   width: 30px;
   height: 30px;
   margin-top: 5px;
+  border:none;
 }
 
 .follow:hover{
@@ -97,16 +114,19 @@
   color:#7f7f7d;
   cursor: pointer;
   border:none;
+  align-content: center;
+  background-color: white;
 }
 
 .isfollow i{
   width: 100%;
   height: 100%;
   font-size: 1.5rem;
-  color:white;
-  background-color: #C1D72F;
+  color:#C1D72F;
+  background-color: white;
   cursor: pointer;
   border:none;
+  align-content: center;
 }
 
 .follow i:hover{
@@ -121,6 +141,7 @@
   margin-top: 5px;
   background-color: transparent;
   border-color: #57121d;
+  border:none;
 }
 .delete i{
   font-size: 1.5rem;
